@@ -1,4 +1,4 @@
-$Id: CHANGELOG,v 1.44 2001-02-09 11:58:04 adam Exp $
+$Id: CHANGELOG,v 1.45 2001-03-26 11:39:34 adam Exp $
 
 06/19/95 Release of ir-tcl-1.0b
 ------------------------------------------------------
@@ -137,3 +137,7 @@ $Id: CHANGELOG,v 1.44 2001-02-09 11:58:04 adam Exp $
 
 02/09/01 Updated for Tcl8.1 and upwards where internal encoding is UTF-8.
          Queries and Scan star terms are converted to external encoding.
+
+03/26/01 Fixed bug in ir_deleteDiags. Thanks to Rustam T. Usmanov
+          <rustam@unilib.neva.ru>
+
